src/objects/FieloAlpha__RedemptionRuleCriteria__c.object
<CustomObject>
    <description>Criteria for a member to belong to a segment.</description>
    <fields>
        <fullName>FieloAlpha__BooleanValue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Boolean Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__DateValue__c</fullName>
        <label>Date Value</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__FieldName__c</fullName>
        <label>Field Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__FieldType__c</fullName>
        <label>Field Type</label>
        <picklist>
            <picklistValues>
                <fullName>String</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boolean</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__Name__c</fullName>
        <formula>HYPERLINK(&apos;/&apos; + Id, FieloAlpha__FieldName__c + &apos; &apos; + Text(FieloAlpha__Operator__c ) + &apos; &apos; + FieloAlpha__Values__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__NumberValue__c</fullName>
        <label>Number Value</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__Operator__c</fullName>
        <label>Operator</label>
        <picklist>
            <picklistValues>
                <fullName>equals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>not equals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>greater than</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>greater or equal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>less than</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>less or equal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>contains</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>not contains</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__RedemptionRule__c</fullName>
        <label>Redemption Rule</label>
        <referenceTo>FieloAlpha__RedemptionRule__c</referenceTo>
        <relationshipName>Redemption_Criterias</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__Values__c</fullName>
        <label>Values</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>Segment Criteria</label>
    <nameField>
        <label>Redemption Criteria</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Segments Criteria</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>